# BorderlandsSaveEditor

./: .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt
borderlands2/: CMakeLists.txt  Readme.md
borderlands2/include/borderlands2/: borderlands2.hpp  save_data.hpp  save_file.hpp
borderlands2/include/minilzo-2.10/: minilzo.h
borderlands2/resources/: Doxyfile.in
borderlands2/resources/76561198034853688/: Save0002.sav  Save0003.sav  Save0004.sav  Save0005.sav  Save0007.sav  Save0009.sav
borderlands2/resources/protobuf/: BankSlot.proto  Color.proto  GUID.proto  InventorySlotData.proto  PackedItemDataOptional.proto  ResourceData.proto  WillowTwoPlayerSaveGame.proto
borderlands2/src/: CMakeLists.txt
borderlands2/src/borderlands2/: CMakeLists.txt  borderlands2.cpp  save_data.cpp  save_file.cpp
borderlands2/src/minilzo-2.10/: CMakeLists.txt
borderlands2/src/verify_save_borderlands2/: CMakeLists.txt  main.cpp
borderlands2/test/: CMakeLists.txt
borderlands2/test/borderlands2/: CMakeLists.txt  borderlands2.cpp  main.cpp  test_borderlands2.cpp
cmake/modules/: FindLZO.cmake  FindLibZip.cmake  VersionResource.rc  Windeployqt.cmake  generate_product_version.cmake
common/: CMakeLists.txt  License.txt  Readme.md  Readme.txt
common/include/common/: common.hpp
common/resources/: Doxyfile.in  common_logo.xcf
common/src/common/: CMakeLists.txt  common.cpp  decoder.cpp
common/test/common/: CMakeLists.txt  test_common.cpp  test_main.cpp
include/: borderlands2.hpp  library.hpp  main.h  savefiles.hpp
include/borderlands2/: borderlands2.hpp  borderlands2_logger.hpp
include/common/: common.hpp
include/save_editor/: savefiles.hpp
resources/: appicon.icns  image_resources.qrc  player.json  save_editor_de.ts  save_editor_en.ts  translations.qrc
resources/76561198034853688/: Save0001.sav  Save0006.sav  Save0008.sav
resources/langs/: save_editor_de.ts  save_editor_en.ts
resources/protobuf/: GoldenKeys.proto  ItemData.proto  LockoutData.proto  MissionData.proto  PendingMissionRewards.proto  SkillData.proto  WorldDiscoveryData.proto
save_editor/: CMakeLists.txt  Readme.md  Readme.txt
save_editor/include/: main.hpp
save_editor/resources/: Doxyfile.in
save_editor/resources/langs/: save_editor_de.ts  save_editor_en.ts
save_editor/resources/protobuf/: ChallengeData.proto  ChosenVehicleCustomization.proto  DLCExpansionData.proto  ItemMemento.proto  MissionPlaythroughData.proto  MissionStatus.proto  OneOffLevelChallengeData.proto  PackedItemData.proto  PackedWeaponData.proto  PackedWeaponDataOptional.proto  PlayerMark.proto  QuickWeaponSlot.proto  RegionGameStageData.proto  UIPreferencesData.proto  WeaponData.proto  WeaponMemento.proto
save_editor/src/: CMakeLists.txt  main.cpp  main_windows.cpp
save_editor/src/save_editor/: CMakeLists.txt
src/: CMakeLists.txt  Saveeditor_MainWindow.ui  borderlands2.cpp  library.cpp  main.cpp  savefile.cpp
src/borderlands2/: CMakeLists.txt  borderlands2.cpp
src/common/: CMakeLists.txt  common.cpp  decoder.cpp
src/minilzo-2.10/: CMakeLists.txt  minilzo.c
src/save_editor/: CMakeLists.txt  SaveEditor_MainWindow.ui  main.cpp  main_windows.cpp  savefile.cpp
test/: CMakeLists.txt  string-compare.cpp  test_main.cpp
test/borderlands2/: CMakeLists.txt  borderlands2.cpp
test/common/: CMakeLists.txt  common.cpp
